--- a/holaa.css
+++ b/holaa.css
@@ -1,40 +1,31 @@
 ﻿body
-{ background-image:url(xxd.jpg);
+{ background-image:url(gatitos.jpg);
 }
 .hola{
 font-size:70px;
 font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-color:burlywood;
-background-color:brown;
-border:dotted 10px black;
+color:bisque;
+background-color:burlywood
 }
 .uwu {
-    font-size: 70px;
+    font-size: 45px;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    color:aqua;
-    background-color:blue;
-    border: dotted 10px red;
+    color:burlywood;
 }
 .skz {
-    font-size: 70px;
+    font-size: 65px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: aliceblue;
-    background-color: cadetblue;
-    border: dotted 10px green;
+    color:khaki;
 }
 .wd {
-    font-size: 70px;
+    font-size: 25px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    color: bisque;
-    background-color: darkkhaki;
-    border: dotted 10px yellow;
+    color:black;
 }
 .charala {
-    font-size: 70px;
+    font-size: 15px;
     font-family: 'Times New Roman', Times, serif;
     color: lemonchiffon;
-    background-color: lightgreen;
-    border: dotted 10px pink;
 }
 
   
